--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         </div>
       </div>
       <div class="terminal-window">
-        <button id="enterBtn">ENTER THE AI AGENTS ROOM</button>
+        <button id="enterBtn" onclick="window.location.href='https://www.0belus.ai/darknet.html'">ENTER THE AI AGENTS ROOM</button>
         <div class="button-grid">
           <button onclick="window.location.href='cryptolock.html'" class="grid-button">
             QUANTUM AI VAULT [HUGE PRIZE]
